# slack-blocks-rs

./: .editorconfig  .gitignore  .releaserc.yml  .versionrc.json  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  README.tpl  rustfmt.toml
.github/workflows/: bump.yml  ci_check.yml  cicd.yml  gh_release.yml  publish.yml
.utils/: cargo-updater.js  common.js  html-root-updater.js  slack-dom-to-rustdoc.js
docs/: CONTRIBUTING.md
examples/: reqwest.rs
src/: blocks.rs  blox.rs  build.rs  compose.rs  lib.rs  mox.rs  val_helpr.rs  validation.rs
src/block_elements/: button.rs  checkboxes.rs  date_picker.rs  image.rs  mod.rs  overflow.rs  radio.rs  select.rs  text_input.rs
src/block_elements/select/: builder.rs  conversation.rs  external.rs  mod.rs  public_channel.rs  static_.rs  user.rs
src/block_elements/select/multi/: conversation.rs  external.rs  mod.rs  static_.rs  user.rs
src/blocks/: actions.rs  context.rs  file.rs  header.rs  image.rs  input.rs  mod.rs  rich_text.rs  section.rs
src/compose/: confirm.rs  conversation_filter.rs  mod.rs  opt.rs  opt_group.rs
src/compose/text/: mod.rs  mrkdwn.rs  plain.rs
src/elems/: button.rs  checkboxes.rs  date_picker.rs  image.rs  mod.rs  overflow.rs  radio.rs  text_input.rs
src/elems/select/: builder.rs  conversation.rs  external.rs  mod.rs  public_channel.rs  static_.rs  user.rs
src/elems/select/multi/: conversation.rs  external.rs  mod.rs  public_channel.rs  static_.rs  user.rs
tests/: common.rs  json.rs  json_new.rs  validation.rs
tests/json/: mod.rs
tests/json/blocks/: actions.rs  context.rs  divider.rs  file.rs  header.rs  image.rs  input.rs  mod.rs  rich_text.rs  section.rs
tests/json/compose/: confirm.rs  conversation_filter.rs  mod.rs  option.rs  text.rs
tests/json/elems/: button.rs  checkboxes.rs  date_picker.rs  image.rs  mod.rs  overflow.rs  radio.rs  text_input.rs
tests/json/elems/select/: conversation.rs  external.rs  mod.rs  public_channel.rs  static_.rs  user.rs
tests/json_new/: mod.rs
tests/json_new/blocks/: actions.rs  context.rs  file.rs  input.rs  mod.rs  section.rs
tests/json_new/compose/: confirm.rs
tests/json_new/elems/: button.rs  mod.rs
tests/json_new/elems/select/: user.rs
