[package]
name = "slack-blocks"
version = "0.19.1"
description = "Models + clientside validation for Slack's JSON Block Kit"

edition = "2018"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"

homepage = "https://github.com/cakekindel/slack-block-kit-rs"
repository = "https://github.com/cakekindel/slack-block-kit-rs"
readme = "README.md"

keywords = ["slack", "model", "models", "validation", "json"]
categories = ["data-structures"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
validator = "0.10.0"
validator_derive = "0.10.0"

[dev-dependencies]
lazy_static = "1.4.0"
