[package]
name = "slack-blocks"
version = "0.23.1"
description = "Models + clientside validation for Slack's JSON Block Kit"

edition = "2018"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"

homepage = "https://github.com/cakekindel/slack-block-kit-rs"
repository = "https://github.com/cakekindel/slack-block-kit-rs"
readme = "README.md"

keywords = ["slack", "messages", "models", "ergonomic", "fully-documented"]
categories = ["data-structures"]

[features]
unstable = ["blox", "validation"]
blox = ["mox"]
validation = ["validator"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "^1", features = ["derive"] }
validator = { version = "0.10.0", optional = true }
validator_derive = { version = "0.10.0", optional = true }
mox = { version = "0.12", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
mox = "0.12"
pretty_assertions = "0.7.2"
